--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -175,6 +175,19 @@ a {
     margin-top: 70px;
 }
 
+.clients .images a {
+    display: flex;
+    align-items: center;
+    height: 90px;
+    padding: 0 42px;
+    border-radius: 12px;
+    /* background-color: orange; */
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
+
 /* ==================== GUIDES =================== */
 .guides {
     margin-top: 40px;
