--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,7 +14,9 @@ body {
     font-family: "Poppins";
 }
 
-.header {
+.hero-wrap {
+    display: flex;
+    flex-direction: column;
     position: relative;
     background-color: #e6f0ff;
     height: 100vh;
@@ -62,10 +64,20 @@ a {
     align-items: center;
 }
 /* NAVBAR */
+.fixed-header {
+    background: #e6f0ff;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    /* padding-top: 38px; */
+    padding: 12px 0;
+    /* background: orange; */
 }
 
 .navbar ul {
